--- a/react-app/src/components/NavBar.css
+++ b/react-app/src/components/NavBar.css
@@ -7,6 +7,7 @@
     width: 100vw;
     border-bottom: rgb(206, 206, 206) 1px solid;
     height: 90px;
+    z-index: 99999999;
 }
 
 .inner-nav-container {
@@ -54,14 +55,26 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 140px;
+    width: 200px;
 }
 
 .right-nav-wrapper2 {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 260px;
+    width: 200px;
+}
+
+
+
+.cart-avatar {
+    height: 25px;
+    width: 100%;
+}
+
+#cart-avatar {
+    display: flex;
+    align-items: center;
 }
 
 #logout {
@@ -82,6 +95,8 @@
 
 .user-avatar {
     height: 30px;
+    width: 100%;
+
 }
 
 #user-avatar {
@@ -124,6 +139,7 @@
     transition: 1s;
     color: white;
     font-weight: bold;
+    margin-left: 10px;
 }
 
 #signup2 {
