--- a/react-app/src/components/Snack/SnackPage.css
+++ b/react-app/src/components/Snack/SnackPage.css
@@ -1,5 +1,6 @@
 #snack-image {
-    width: 200px;
-    height: 200px;
+    width: 250px;
+    height: 250px;
     object-fit: cover;
+    border-radius: 10px;
 }
