--- a/react-app/src/components/Footer/Footer.css
+++ b/react-app/src/components/Footer/Footer.css
@@ -4,6 +4,8 @@
 }
 
 .footer-wrapper {
+    position: absolute;
+    bottom: -150px;
     display: flex;
     justify-content: center;
     align-items: center;
